apps/base/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: linkding
  name: linkding
  namespace: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  template:
    metadata:
      labels:
        app: linkding
    spec:
      securityContext:
        runAsUser: 33   # www-data user ID
        runAsGroup: 33  # www-data group ID
        fsGroup: 33     # www-data group ID
      volumes:
        - name: linkding-data
          persistentVolumeClaim:
            claimName: linkding-data-pvc
      containers:
        - name: linkding
          image: sissbruecker/linkding:1.41.0
          ports:
            - containerPort: 9090
          securityContext:
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: linkding-data
              mountPath: "/etc/linkding/data"
