apps/base/linkding/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkding
  namespace: linkding
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  entryPoints:
    - web # use 'web' for HTTP only
  rules:
    - host: linkding.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: linkding
              port:
                number: 9090
